# basic-sentiment-analysis-with-transformer

./: .gitignore  README.md  pyproject.toml
src/: data.py  evaluate.py  model.py  predict.py  tokenizer.py  train.py
