[project]
name = "basic-sentiment-analysis-with-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]
